# sandbox

./: .gitignore  LICENSE  README.md  sampletest.txt  tagtest.txt
cpp/pkcs11/: CMakeLists.txt  demo.cpp
docker/Azure.Identity.SFTest.Docker/: Dockerfile  Program.cs
docs/: auth-api-review.md  crypto-api-review.md  keyvault-datatypes.md
go/msi2go/: go.mod  msi2go.go
net/: NuGet.Config  sandbox.sln
net/NbhCache/: NbhCache.csproj  Program.cs  UnitTest1.cs
net/apireview/: Program.cs  apireview.csproj  apireview.sln
net/app-service-msi-package-test/: Program.cs  app-service-msi-test.csproj
net/app-service-msi-package-test/packages-local/: Azure.Identity.1.0.0-preview.2.nupkg  Azure.Identity.1.0.0-preview.2.snupkg
net/ecsignxplat/: Program.cs
net/sanbox.sourcegenerators.core/: Program.cs  sandbox.sourcegenerators.core.csproj
net/sandbox/: Program.cs
net/sandbox.common/: ArgParser.cs  IListExtensions.cs  Retry.cs
net/sandbox.common.tests/: XunitTraitTests.cs
net/sandbox.common.tests/Properties/: AssemblyInfo.cs
net/sandbox.crypto/: sandbox.crypto.sln
net/sandbox.crypto/cypher/: PasswordEncryptionProvider.cs  Program.cs  cypher.csproj
net/sandbox.crypto/cypher/Properties/: AssemblyInfo.cs
net/sandbox.crypto/filecrypto/: PasswordEncryptionProvider.cs  Program.cs  filecrypto.csproj
net/sandbox.docit/: sandbox.docit.sln
net/sandbox.docit/docit/: Program.cs  docit.csproj
net/sandbox.entity/: Program.cs  SandboxDb.cs  sandbox.entity.csproj
net/sandbox.entity/Properties/: AssemblyInfo.cs
net/sandbox.keyvault/python/: backup_restore_sample.py
net/sandbox.keyvault/python/auth/: key_vault_adal_auth.py
net/sandbox.keyvault/python/repl/: key_vault_agent.py  key_vault_config.py
net/sandbox.keyvault/python/samples/: backup_restore_sample.py
net/sandbox.netcore/: sandbox.netcore.csproj
net/sandbox.sourcegenerator/: Class1.cs  sandbox.sourcegenerator.csproj
net/sandbox.tools.depr/: RandomEx.cs
net/sandbox.tools.depr/Properties/: AssemblyInfo.cs
net/sandbox.tools.tests/: StreamForkTests.cs  sandbox.tools.tests.csproj
net/sandbox/Properties/: AssemblyInfo.cs
net/temp/: temp.sln
net/temp/temp/: Program.cs
py/: excavation.py  postit.py  utils.py
py/castle/: bar.py
py/keyvault/crytpography/: algorithm.py  key.py  transform.py
py/keyvault/crytpography/algorithms/: aes_cbc_hmac.py
py/ns_override/: override_test.py
py/ns_override/override/: __init__.py  classes.py
src/: sandbox.sln
src/sanbox.sourcegenerators.core/: sandbox.sourcegenerators.core.csproj
src/sandbox/: Program.cs  sandbox.csproj
src/sandbox.common/: ArgParser.cs  MiscEx.cs  RandomEx.cs  RandomExtensions.cs  Sandbox.cs  StreamFork.cs  sandbox.common.csproj
src/sandbox.common.tests/: sandbox.common.tests.csproj
src/sandbox.crypto/: sandbox.crypto.sln
src/sandbox.crypto/cypher/: DecryptionFile.cs
src/sandbox.crypto/filecrypto/: PasswordEncryptionProvider.cs  Program.cs
src/sandbox.crypto/filecrypto/Properties/: AssemblyInfo.cs
src/sandbox.docit/docit/Properties/: AssemblyInfo.cs
src/sandbox.entity/: App.config  Program.cs  sandbox.entity.csproj
src/sandbox.keyvault/python/: key_vault_agent.py  key_vault_crypto.py  key_vault_repl.py  secrets.py
src/sandbox.keyvault/python/repl/: key_vault_auth.py  key_vault_repl.py
src/sandbox.netcore/: Program.cs
src/sandbox.python/: mcrypt_sample.py  sandbox.py  sandbox.python.py  sandbox.python.pyproj  utils.py
src/sandbox.python/castle/: __init__.py  foo.py  resolver.py
src/sandbox.python/keyvault/crytpography/: rsa_key.py  transform.py
src/sandbox.python/keyvault/crytpography/algorithms/: aes_cbc_hmac.py  ecdsa.py  rs_256.py
src/sandbox.python/ns_override/: __init__.py
src/sandbox.python/ns_override/base/: __init__.py  classes.py
src/sandbox.stress.execution/: IUnitTest.cs  sandbox.stress.execution.csproj
src/sandbox.tools/: CmdArgsBase.cs  Sandbox.cs  StreamFork.cs  sandbox.tools.csproj
src/sandbox.tools.depr/: Retry.cs
src/sandbox.tools.tests/: StreamForkTests.cs  sandbox.tools.tests.csproj
